src/objects/TASKRAY__trChecklistGroup__c.object
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores checklist groupings.</description>
    <fields>
        <fullName>TASKRAY__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__TaskForGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaskRay Task</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Checklists</relationshipLabel>
        <relationshipName>TaskRay_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAvailableExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows Sites guest users access to the checklist</description>
        <label>Available for External Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Source</label>
        <referenceTo>TASKRAY__trChecklistGroup__c</referenceTo>
        <relationshipLabel>Cloned Checklists</relationshipLabel>
        <relationshipName>Template_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TaskRay Checklist</label>
    <listViews>
        <fullName>All_Checklist_Items</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Checklist Items</label>
    </listViews>
    <listViews>
        <fullName>Billing_Unassigned_trChecklistGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>Billing Unassigned</label>
        <queue>Billing_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Strategy_Unassigned_trChecklistGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>Client Strategy Unassigned</label>
        <queue>Client_Strategy_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Operations_Unassigned_trChecklistGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>Data Operations Unassigned</label>
        <queue>Data_Operations_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Science_Unassigned_trChecklistGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>Data Science Unassigned</label>
        <queue>Data_Science_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Client_Setup_Unassigned_trChecklistGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>IT Client Setup Unassigned</label>
        <queue>IT_Client_Setup_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Clinical_Portal_Unassigned_trChecklistGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>IT Clinical Portal Unassigned</label>
        <queue>IT_Clinical_Portal_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>trUnassigned_trChecklistGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>TaskRay Unassigned</label>
        <queue>trUnassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>TaskRay Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Edit_Template_Checklist</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 TASKRAY__TaskForGroup__r.TASKRAY__Project__r.TASKRAY__trTemplate__c = TRUE,
 !$Permission.TaskRay_Admin_Permission_Set 
)</errorConditionFormula>
        <errorMessage>You do not have permission to edit a TaskRay Template</errorMessage>
    </validationRules>
</CustomObject>